# InopolisExam

./: .gitignore  README.md  pyproject.toml
backend/: model_params.tar  requirements.txt  server.py
frontend/nba-prediction/: package-lock.json
frontend/nba-prediction/src/app/: layout.tsx  page.tsx
learning/: main.ipynb
