[project]
name = "nba-predictiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
